--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?mzsxikh#1" target="_blank">首页</a> | <a href="https://d15m60lsma25jk.cloudfront.net/1?ayfsewvfa" target="_blank">动态网</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/2?qizpuqwh" target="_blank">大纪元</a> | <a href="https://d1tvvb2j7fpfrx.cloudfront.net/4?oakoeb" target="_blank">看中国</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/pHh5q?pqlehy" target="_blank">新生网</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/tktpt?wwbaemwpl" target="_blank">阿波罗网</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/Mjpvu?tipnk" target="_blank">干净世界</a> | <a href="https://di88ceki78g29.cloudfront.net/10?kddrml" target="_blank">退党服务</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/Rffqf?onack" target="_blank">明慧广播</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/nw9Vn?nenpwvvjc" target="_blank">传奇时代</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/AF9AG?fxufx" target="_blank">新境界影视</a> | <a href="https://d2n08tj75ohh5.cloudfront.net/zqMQA?oxhlgidwz" target="_blank">文昭谈论</a> | <a href="https://d15m60lsma25jk.cloudfront.net/7?oxclgq" target="_blank">明慧</a></p><p><a href="https://d34v2ua3ud12rg.cloudfront.net/9?jhmvhl" target="_blank">大法</a> | <a href="https://d2184d78prq5kd.cloudfront.net/3?ewvtz" target="_blank">新唐人</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/obAhT?dhizawj" target="_blank">人民报</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/xXNHu?gulhyaqqf" target="_blank">放光明</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/5?nwkntaf" target="_blank">新纪元</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/6?dpwsnllh" target="_blank">希望之声</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/11?bbnfrnqb" target="_blank">无界网络</a> | <a href="https://dme0bxbvomkno.cloudfront.net/Pueji?bjflpv" target="_blank">追查国际</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/16?qybwzhdm" target="_blank">明慧之窗</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/LdvzZ?akfhpcd" target="_blank">细语人生</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/fBn3r?quygb" target="_blank">新世纪影视</a> | <a href="https://dvucua6a0b85v.cloudfront.net/PUWMb?anpgenyfq" target="_blank">江峰时刻</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/8?xyplh" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?uaqep#1" target="_blank">首页</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/1?amtddeh" target="_blank">动态网</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/2?envksd" target="_blank">大纪元</a> | <a href="https://dmt6yqw0je6jw.cloudfront.net/4?magxkmg" target="_blank">看中国</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/pHh5q?qbcpp" target="_blank">新生网</a> | <a href="https://dep6yudto3kbo.cloudfront.net/tktpt?dkochiqg" target="_blank">阿波罗网</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/Mjpvu?bmpzs" target="_blank">干净世界</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/10?jjjusgdc" target="_blank">退党服务</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/Rffqf?mxtuvdvcp" target="_blank">明慧广播</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/nw9Vn?xpybkyug" target="_blank">传奇时代</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/AF9AG?xmtvdfy" target="_blank">新境界影视</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/zqMQA?tkzqzow" target="_blank">文昭谈论</a> | <a href="https://d1jex6syje0yji.cloudfront.net/7?gqrztso" target="_blank">明慧</a></p><p><a href="https://d27l6dsifacvoi.cloudfront.net/9?efhoh" target="_blank">大法</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/3?yokpyifk" target="_blank">新唐人</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/obAhT?sblhx" target="_blank">人民报</a> | <a href="https://d3caox32lipp7h.cloudfront.net/xXNHu?nqbxtqzs" target="_blank">放光明</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/5?bkoev" target="_blank">新纪元</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/6?fwougqp" target="_blank">希望之声</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/11?hdtawj" target="_blank">无界网络</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/Pueji?dilcbyf" target="_blank">追查国际</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/16?osiefyh" target="_blank">明慧之窗</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/LdvzZ?osbzhh" target="_blank">细语人生</a> | <a href="https://d1u99il8548gs4.cloudfront.net/fBn3r?afniilsms" target="_blank">新世纪影视</a> | <a href="https://dl1ez95kskssm.cloudfront.net/PUWMb?fnoskwea" target="_blank">江峰时刻</a> | <a href="https://d2torrlf4djx10.cloudfront.net/8?crnshspvh" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544983.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/04/id13976681-GettyImages-819890836-320x200.jpg"><p align="center">官二代谈中国青少年失踪真相——被摘器官</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544983.md#1" title="官二代谈中国青少年失踪真相——被摘器官""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/04/id13976681-GettyImages-819890836-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545595.md#1" title="向往安全与自由 昔日粉红携儿女逃离中国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545606-123f8e79e4901f8331fb35f26681f58a-320x200.png">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544963.md#1" title="大而美法案如何影响美国人学贷与买车""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/07/id14544969-AFP__20250704__64QE3UY__v2__MidRes__PresidentDonaldTrumpDeliversRemarksAtIowaStateFa-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545333.md#1" title="川普：普京不肯停火 乌克兰需爱国者导弹""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/05/id14260624-1x-1-2-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545634.md#1">北约秘书长：川普配得上所有对他的赞扬</a><br>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a><br>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545612.md#1">王毅访欧露援俄底牌 专家揭其“泄密”意图</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1">湖南一景区11级大风吹翻游船 29人落水</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545635.md#1">山东一高校宿舍无空调 学生热晕送医</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545632.md#1">锦州港财务造假遭重罚 高管被捕 退市倒计时</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545614.md#1">伊朗领袖哈梅内伊自战争以来首次公开露面</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545615.md#1">加州今年最大野火已吞噬近8万英亩土地</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545639.md#1">涉“鲜虾欺诈” 南卡州25家餐厅被起诉</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545605.md#1">独立日后一天 马斯克宣布成立美国党</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545634.md#1">北约秘书长：川普配得上所有对他的赞扬</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545612.md#1">王毅访欧露援俄底牌 专家揭其“泄密”意图</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1">湖南一景区11级大风吹翻游船 29人落水</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545635.md#1">山东一高校宿舍无空调 学生热晕送医</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545632.md#1">锦州港财务造假遭重罚 高管被捕 退市倒计时</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542304.md#1">演员送外卖 中国影视界返贫潮冰山一角？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542115.md#1">【百年真相】从延安到中南海 高官奢华特供揭秘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542366.md#1">国际金价狂泻 深圳水贝商家销售却骤降三成</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dtqjxyh2byqsa.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dtqjxyh2byqsa.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,910</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2cus7i4x3juff.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2cus7i4x3juff.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,910</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 448,806,423 人
+!共 448,806,960 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545302.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545306-page-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545302.md#1">【一线采访】广州退休老人集体维权 讨养老钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544975.md#1">在德国感受言论自由 大陆人退出中共组织</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544220.md#1">插播真相陷冤狱20年 甘肃张荣娟遭骚扰威胁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544722.md#1">中共将藏族幼童送寄宿学校 令其脱离藏文化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544553.md#1">遭长期稳控 丹东姜家文控诉区委书记左忠鹏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543103.md#1">上海访民诉讼案开庭 市局出动警察维稳</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545632.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545637-GettyImages-1591215123-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545632.md#1">锦州港财务造假遭重罚 高管被捕 退市倒计时</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544882.md#1">贝森特：人民币当储备货币 关键条件达不到</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544141.md#1">涉欺骗性商业行为 Shein被法国罚4千万欧元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544048.md#1">6月财新中国服务业PMI逊于预期 9个月以来最低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543753.md#1">美国解除限制 重启乙烷对华出口</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543565.md#1">多名中共稀土高管离职 分析：反制美国筹码变少</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545600.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/02/id14436589-744776-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545600.md#1">法国促欧盟设关税壁垒 阻中国产品扼杀工业</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544785.md#1">印度：印巴冲突中 中共向巴方提供即时情报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544516.md#1">欧盟强调台海和平重要性 台外交部：凸显重视</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543988.md#1">日媒：习权力正受打击 国安系首当其冲</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544100.md#1">受贿数额特别巨大 宁夏“老虎”齐同生被公诉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543823.md#1">新疆书记换人 袁红冰：与中东局势变动有关</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545621-50bfda1ccbd3d4a114c5b6abece188f5-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1">湖南一景区11级大风吹翻游船 29人落水</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545635.md#1">山东一高校宿舍无空调 学生热晕送医</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545368.md#1">广西男子钓鱼触电被烧伤 鱼塘4千斤鱼被电死</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545319.md#1">甘肃数十幼儿血铅超标 当地检测结果被疑造假</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545121.md#1">成都暴雨 东站成“水帘洞”居民家中插座出水</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544734.md#1">7月飘雪 青海祁连大草原一夜之间白雪皑皑</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/05/id14242399-yang-mi-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545320.md#1">浙江两火车相撞 受困乘客破窗通风受责引议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545007.md#1">朱时茂自曝一天遭遇两次诈骗 被骗走2千元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544993.md#1">【一线采访】河北百余业主饮水集体中毒</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544743.md#1">上海推外卖骑手绿码红码 勾起网民封控记忆</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544603.md#1">嫌弃信众供奉的大米 五台山僧人扔殿外惹众怒</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538784.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2022/08/id13807926-000_32G94KW-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538784.md#1">华为鸿蒙折叠电脑 有哪些事实不让你知道</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535124.md#1">潘粤明笑称自己专业画画 业余时间才去演戏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14534300.md#1">太原一所中学军事化管理初中生 遭集体吐槽</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531373.md#1">杀人犯变身北京网红和智库专家 潜逃31年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528721.md#1">美再收紧对华签证 取消14岁以下儿童免面试</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/8/n14527202.md#1">分析：从高考作文看中共教育就是洗脑</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/5/23/n14516563.md#1">王友群：中南海巨变 中国出路在何方</a><br>
